# dave

gazebo_fog/: CMakeLists.txt  package.xml
gazebo_fog/launch/: uuv_dave_fog.launch
gazebo_fog/src_gazebo/: FogCameraPlugin.cc  FogCameraPlugin.hh  FogCameraSensor.cc  FogCameraSensor.hh  FogCameraSensorPrivate.hh  add_fog_camera_sensor.cc
gazebo_fog/src_ros/: gazebo_ros_fog_camera.cpp  gazebo_ros_fog_camera.h
gazebo_fog/world/: uuv_dave_ocean_fog.world
predator_description/: CMakeLists.txt  package.xml
predator_description/config/: joints.yaml
predator_description/launch/: rviz.launch  spawn.launch
predator_description/urdf/: links_joints.xacro  predator.xacro  robot_parameter.xacro
sonar_dave_plugins/sonar_dave_uuv/: CMakeLists.txt  package.xml
sonar_dave_plugins/sonar_dave_uuv/src/: gazebo_ros_image_sonar.cpp
uuv_dave/launch/: upload_rexrov_oberon7.launch  upload_rexrov_predator.launch  uuv_dave.launch  uuv_dave_predator.launch
uuv_dave/urdf/: rexrov_predator.xacro
uuv_dave/urdf/predator_arm/: oberon7_default.xacro  rexrov_predator.xacro  serial_arm.gazebo.xacro  serial_arm.xacro
